reverted changes back

--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -34,6 +34,9 @@
       <span>Indentation Size</span>
       <i
         class="pi pi-question-circle popover-trigger-icon"
+        (click)="indentationSizePopover.toggle($event)"
+        (keyup.enter)="indentationSizePopover.toggle($event)"
+        (keyup.space)="indentationSizePopover.toggle($event)"
         tabindex="0"
       ></i>
     </label>
