--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,21 @@
 
 <div class="syntax-highlighter-container">
   <!-- Title -->
-  <h1>
-    Syntax Highlighting with
-    <span class="project-name">PastePerfect <i class="pi pi-code"></i></span>
-  </h1>
+  <header class="title">
+    <h1>
+      Syntax Highlighting with
+      <span class="project-name">PastePerfect <i class="pi pi-code"></i></span>
+    </h1>
+    <div>
+      <a href="https://github.com/NikAcc/paste-perfect" target="_blank" rel="noopener noreferrer"
+         class="p-button p-button-secondary"
+         pTooltip="Go to the GitHub page"
+         [tooltipOptions]="tooltipOptions"
+      >
+        <i class="pi pi-github"></i>
+      </a>
+    </div>
+  </header>
 
   <!-- Welcome Message -->
   <div class="intro-message">
