--- a/src/app/components/settings/settings.component.scss
+++ b/src/app/components/settings/settings.component.scss
@@ -51,6 +51,7 @@
   box-shadow: var(--box-shadow);
 
   .popover-title {
+    color: var(--p-primary-color);
     font-weight: bold;
     margin-bottom: var(--spacing-xs);
   }
