--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,13 +9,47 @@
   overflow: hidden;
 }
 
+.title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 // Typography & Colors
 .intro-message {
   color: var(--p-text-muted-color);
 }
 
 .project-name {
+  position: relative;
   color: var(--p-primary-color);
+
+  &::after {
+    position: absolute;
+    content: "";
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background-color: currentColor;
+
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform var(--p-transition-duration) ease-in;
+  }
+
+  .pi-code {
+    transition: transform var(--p-transition-duration) ease-in;
+  }
+
+  &:hover .pi-code {
+    transform: rotate(15deg);
+  }
+
+  &:hover::after {
+    transform: scaleX(1);
+    transform-origin: left;
+  }
 }
 
 // Input and Settings Section
