--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -54,10 +54,25 @@
     <label for="theme-selector">Theme</label>
     <p-select
       inputId="theme-selector"
-      [options]="availableThemes"
+      [options]="groupedAvailableThemes"
       optionLabel="label"
+      [group]="true"
       [(ngModel)]="themeService.selectedTheme"
-    ></p-select>
+    >
+      <!-- Style the group heading -->
+      <ng-template let-group #group>
+        <div class="group-heading">
+          <!-- Display an icon conditionally -->
+          @if (group.value === "dark") {
+            <i class="pi pi-moon"></i>
+          } @else if (group.value === "light") {
+            <i class="pi pi-sun"></i>
+          }
+          <!-- Group label -->
+          <span>{{ group.label }}</span>
+        </div>
+      </ng-template>
+    </p-select>
   </div>
 
   <!-- Indentation Mode -->
