--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,10 +8,13 @@
       <span class="project-name">PastePerfect <i class="pi pi-code"></i></span>
     </h1>
     <div>
-      <a href="https://github.com/NikAcc/paste-perfect" target="_blank" rel="noopener noreferrer"
-         class="p-button p-button-secondary"
-         pTooltip="Go to the GitHub page"
-         [tooltipOptions]="tooltipOptions"
+      <a
+        href="https://github.com/NikAcc/paste-perfect"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="p-button p-button-secondary"
+        pTooltip="Go to the GitHub page"
+        [tooltipOptions]="tooltipOptions"
       >
         <i class="pi pi-github"></i>
       </a>
