improved modularity and added sanitization to input and output code (closes #1)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,8 +24,7 @@
   <!-- Welcome Message -->
   <div class="intro-message">
     <span>
-      Easily highlight and copy your code with HTML formatting for seamless
-      pasting into Word, PowerPoint, or plain text. Enjoy clean,
+      Easily highlight and copy your code with HTML formatting for seamless pasting into Word, PowerPoint, or plain text. Enjoy clean,
       professional-looking code in just a few clicks!
     </span>
   </div>
