--- a/src/app/components/code-input/code-input.component.html
+++ b/src/app/components/code-input/code-input.component.html
@@ -1,7 +1,2 @@
 <!-- Textarea for Code Input -->
-<textarea
-  id="source-code"
-  pTextarea
-  [(ngModel)]="codeService.rawCode"
-  placeholder="Start by pasting your code here!"
-></textarea>
+<textarea id="source-code" pTextarea [(ngModel)]="codeService.rawCode" placeholder="Start by pasting your code here!"></textarea>
