--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,8 +7,7 @@
 :root {
   /* Typography */
   --font-family:
-    ui-sans-serif, -apple-system, system-ui, Segoe UI, Helvetica,
-    Apple Color Emoji, Arial, sans-serif, Segoe UI Emoji, Segoe UI Symbol;
+    ui-sans-serif, -apple-system, system-ui, Segoe UI, Helvetica, Apple Color Emoji, Arial, sans-serif, Segoe UI Emoji, Segoe UI Symbol;
   --font-size-base: 14px;
   --font-size-sm: 0.875rem;
   --font-size-md: 1rem;
