--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -102,9 +102,8 @@
   <div class="popover-content">
     <span class="popover-title">Indentation Size</span>
     <p class="popover-text">
-      Defines the number of spaces used for indentation. If tabs were previously
-      used, this value determines how many spaces should replace each tab, and
-      vice versa.
+      Defines the number of spaces used for indentation. If tabs were previously used, this value determines how many spaces should replace
+      each tab, and vice versa.
     </p>
   </div>
 </p-popover>
@@ -117,9 +116,7 @@
       <p>Choose an indentation character based on your format</p>
       <ul class="info-list">
         <li><strong>Word:</strong> Use <em>spaces</em> or <em>tabs</em>.</li>
-        <li>
-          <strong>PowerPoint:</strong> Use <em>nonbreaking spaces (NBSP)</em>.
-        </li>
+        <li><strong>PowerPoint:</strong> Use <em>nonbreaking spaces (NBSP)</em>.</li>
       </ul>
     </div>
   </div>
