--- a/src/app/components/code-input/code-input.component.html
+++ b/src/app/components/code-input/code-input.component.html
@@ -1,2 +1,3 @@
 <!-- Textarea for Code Input -->
-<textarea id="source-code" pTextarea [(ngModel)]="codeService.rawCode" placeholder="Start by pasting your code here!"></textarea>
+<!-- eslint-disable-next-line @angular-eslint/template/no-autofocus -->
+<textarea autofocus id="source-code" pTextarea [(ngModel)]="codeService.rawCode" placeholder="Start by pasting your code here!"></textarea>
