--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,7 +4,7 @@
 .syntax-highlighter-container {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: var(--spacing-md);
   height: 100%;
   overflow: hidden;
 }
@@ -13,6 +13,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  .button-menu {
+    display: flex;
+    gap: var(--spacing-sm);
+  }
 }
 
 // Typography & Colors
@@ -56,7 +61,7 @@
 .input-section {
   display: flex;
   flex-direction: row;
-  gap: 1rem;
+  gap: var(--spacing-md);
 
   @media (max-width: #{$breakpoint-md}) {
     // Wrap it into columns on smaller screens
