fix: screenshot fixes and overflow bugfix

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <p-toast preventOpenDuplicates />
 
 <!-- Dialog for showing the app settings on mobile devices -->
-<p-dialog header="Highlighting Settings" [modal]="true" [(visible)]="settingsDialogVisible">
+<p-dialog header="Highlighting Settings" id="highlighting-settings-dialog" [modal]="true" [(visible)]="settingsDialogVisible">
   <app-settings></app-settings>
 </p-dialog>
 
