--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,15 +4,32 @@
 .syntax-highlighter-container {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: var(--spacing-md);
   height: 100%;
   overflow: hidden;
+}
+
+::ng-deep #highlighting-settings-dialog {
+  .p-dialog-content {
+    overflow-y: visible;
+  }
+
+  .p-dialog {
+    width: 80vw;
+    max-width: calc(100vw - 2 * var(--spacing-md));
+    min-width: fit-content;
+  }
 }
 
 .title {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  .button-menu {
+    display: flex;
+    gap: var(--spacing-sm);
+  }
 }
 
 // Typography & Colors
@@ -56,7 +73,7 @@
 .input-section {
   display: flex;
   flex-direction: row;
-  gap: 1rem;
+  gap: var(--spacing-md);
 
   @media (max-width: #{$breakpoint-md}) {
     // Wrap it into columns on smaller screens
