feat: show current version in header dynamically

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
     <span class="project-name">PastePerfect <i class="pi pi-code"></i></span>
   </h1>
   <div class="button-menu">
-    <span> v1.2.7 </span>
+    <span>{{ version }}</span>
     <!-- Settings Cog Link (on small devices) -->
     <p-button
       aria-label="Open Settings"
@@ -25,7 +25,7 @@
 
     <!-- GitHub Link -->
     <a
-      href="https://github.com/NikAcc/paste-perfect"
+      href="https://github.com/paste-perfect/paste-perfect/releases/tag/v{{ version }}"
       target="_blank"
       rel="noopener noreferrer"
       class="p-button p-button-secondary"
