--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -7,6 +7,10 @@
     display: flex;
     gap: var(--spacing-sm);
     align-items: center;
+
+    .github-link {
+      text-decoration: none;
+    }
   }
 
   .project-name {
