fix: eslint autofocus fix

--- a/src/app/components/code-input/code-input.component.html
+++ b/src/app/components/code-input/code-input.component.html
@@ -1,6 +1,6 @@
 <div class="input-wrapper">
   <!-- Textarea for Code Input -->
-  <!-- eslint-disable-next-line @angular-eslint/template/no-autofocus -->
+  <!-- eslint-disable @angular-eslint/template/no-autofocus -->
   <textarea
     autofocus
     id="source-code"
