--- a/e2e-tests/styles/styles.css
+++ b/e2e-tests/styles/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Roboto";
-  src: url("./fonts/Roboto-Regular.woff2") format("woff2");
+  src: url("/e2e-tests/styles/fonts/Roboto-Regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
   font-display: block;
