fix: properly migrate code

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -61,6 +61,10 @@
       min-height: 100%;
     }
 
+    .p-card-body {
+      height: 100%;
+    }
+
     .p-card-content {
       display: flex;
     }
