--- a/src/app/components/settings/settings.component.scss
+++ b/src/app/components/settings/settings.component.scss
@@ -34,6 +34,11 @@
   .enable-formatting-toggle:has(input:disabled) {
     cursor: not-allowed;
   }
+
+  // Shrink the toggle wrapper to required width
+  .toggle-wrapper {
+    display: flex;
+  }
 }
 
 // Labels with popover information
