--- a/src/app/components/settings/settings.component.scss
+++ b/src/app/components/settings/settings.component.scss
@@ -34,6 +34,11 @@
   .enable-formatting-toggle:has(input:disabled) {
     cursor: not-allowed;
   }
+
+  // Shrink the toggle wrapper to required width
+  .toggle-wrapper {
+    display: flex;
+  }
 }
 
 // Labels with popover information
@@ -67,5 +72,9 @@
 
   .popover-text {
     color: var(--p-text-muted-color);
+
+    p {
+      margin: var(--spacing-md) 0 0 0;
+    }
   }
 }
